# SmartBomb

./: CMakeLists.txt  README.md
SmartBomb/: CMakeLists.txt  SmartBomb.cpp  SmartBomb.cpp.bak  SmartBomb.h
SmartBomb/BombMovement/: Bomb.cpp  Bomb.h
SmartBomb/Structures/: Coordinates.h  KeyboardArrows.h
SmartBomb/Tracking/: Track.h  Tracking.h
SmartBomb/Tracking/David/: KCF.cpp  KCF.h
SmartBomb/UI/CaptureVideo/: Capture.h
SmartBomb/UI/CaptureVideo/CaptureBombVideo/: CaptureBombVideo.cpp  CaptureBombVideo.h
SmartBomb/UI/CaptureVideo/CaptureLocalVideo/: CaptureLocalVideo.cpp  CaptureLocalVideo.h
SmartBomb/UI/Draw/: Draw.cpp  Draw.h
SmartBomb/UI/SendVideo/: Display.h
SmartBomb/UI/SendVideo/GroundDisplay/: GroundDisplay.cpp  GroundDisplay.h
SmartBomb/UI/SendVideo/LocalDisplay/: LocalDisplay.cpp  LocalDisplay.h
SmartBomb/XMovement/: XMovement.h
SmartBomb/XMovement/Joystick/: Joystick.cpp  Joystick.h
SmartBomb/XMovement/Keyboard/: Keyboard.cpp  Keyboard.h
